<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruct_page2" />

    <Button
        android:id="@+id/exitDialogButton2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/instructTwo"
        android:layout_below="@+id/instructTwo"
        android:text="@string/exit" />

    <Button
        android:id="@+id/startFromDialog"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instructTwo"
        android:text="@string/start" />

</RelativeLayout>