<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruct_page1" />

    <Button
        android:id="@+id/nextButton1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instructOne"
        android:layout_marginLeft="10dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/exitDialogButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextButton1"
        android:layout_alignBottom="@+id/nextButton1"
        android:layout_alignRight="@+id/instructOne"
        android:text="@string/exit" />

</RelativeLayout>