<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/filenameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/filenamelabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/screenshottextsize" />

        <EditText
            android:id="@+id/filenameText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textNoSuggestions" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/screenshotExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="@dimen/screenshottextsize" />

        <TextView
            android:id="@+id/spacer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00" />

        <Button
            android:id="@+id/screenshotSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/save"
            android:textSize="@dimen/screenshottextsize" />
    </LinearLayout>

</LinearLayout>